added S3 support started on front end

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,4 +1,5 @@
 body {
+  background: url('/images/back.png')
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 }
@@ -12,5 +13,29 @@ a {
     li {
       margin: 0px;
     }
+  }
+}
+.navbar {
+  .nav {
+    li {
+      margin-right:200px;
+      img {
+        width: 150px;
+      }
+      &:first-child{
+        margin-right: 55px;
+      }
+      &:last-child {
+        margin-right:0px;
+      }
+      a {
+        font-size: 18px;
+      }
+    }
+  }
+}
+.span2 {
+  a.thumbnail {
+    margin-bottom: 10px;
   }
 }
