--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 body {
+  background: url("/images/back.png");
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -11,4 +12,22 @@ a {
 }
 #side-menu ul li {
   margin: 0px;
+}
+.navbar .nav li {
+  margin-right: 200px;
+}
+.navbar .nav li img {
+  width: 150px;
+}
+.navbar .nav li:first-child {
+  margin-right: 55px;
+}
+.navbar .nav li:last-child {
+  margin-right: 0px;
+}
+.navbar .nav li a {
+  font-size: 18px;
+}
+.span2 a.thumbnail {
+  margin-bottom: 10px;
 }
