--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,7 +1,27 @@
+@font-face {
+  font-family: belgrano;
+  font-style: normal;
+  src: url('/fonts/Belgrano-Regular.ttf');
+}
+@font-face {
+  font-family: gothamb;
+  font-style: normal;
+  src: url('/fonts/GothamBlack.TTF');
+}
+@font-face {
+  font-family: gothamb;
+  font-style: bold;
+  src: url('/fonts/GothamBold.TTF');
+}
+h1, h2, h3, h4, h5, button {
+  font-family: gothamb !important;
+  font-style: bold !important;
+}
 body {
   background: url('/images/back.png')
   padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font: 14px;
+  font-family: belgrano !important;
 }
 a {
   color: #00B7FF
@@ -16,9 +36,12 @@ a {
   }
 }
 .navbar {
+  background-color: white;
   .nav {
     li {
+      position: relative;
       margin-right:200px;
+
       img {
         width: 150px;
       }
@@ -29,7 +52,11 @@ a {
         margin-right:0px;
       }
       a {
+        background-color: white;
         font-size: 18px;
+        &:hover {
+          color: red !important;
+        }
       }
     }
   }
@@ -38,4 +65,99 @@ a {
   a.thumbnail {
     margin-bottom: 10px;
   }
+}
+.navbar-inner {
+  background-image: none !important; //url('/images/back.png') !important;
+  background-color: white !important;
+}
+.span3#side-menu {
+  position: fixed;
+  left: 0px;
+}
+.well {
+  position: relative;
+  min-height: 600px !important;
+  overflow: auto;
+  border: 1px solid red !important;
+  .login-box {
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    margin: 190px auto auto auto;
+    p {
+      text-align:justify;
+    }
+  }
+  .images {
+    margin-top: 20px;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    .thumbnail {
+      margin-bottom: 20px;
+    } 
+  }
+  .checkout-box {
+    max-width: 678px;
+    margin-left: auto;
+    margin-right: auto;
+    .line-item {
+      overflow: hidden;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      border-bottom: 1px solid #999;
+      .tweecs-summary {
+        ul {
+          list-style: none;
+          margin: 0px !important;
+        }
+      }
+    }
+    .item-headers {
+      overflow: hidden;
+      border-bottom: 4px solid black;
+    }
+    .checkbox-options {
+      border-top: 1px solid #999;
+      border-bottom: 1px solid #999;
+    }
+    .control-group {
+      margin-top: 20px;
+    }
+  }
+}
+.app-tip {
+  max-width: 200px;
+}
+.down-arrow {
+  width: 1px;
+  height: 260px;
+  margin: 10px auto;
+  background-color: red;
+}
+.down-arrow:first-child {
+  margin-top: 0px;
+}
+.more-info {
+  text-align:center;
+  ul {
+    list-style: none;
+    margin-left: 0px;
+    font-size: 18px;
+    li {
+      margin-bottom: 18px;
+      a {
+      color: #333;
+        &:hover {
+          color: red;
+        }
+      }
+    }
+  }
+}
+.right-arrow {
+  background-color: red;
+  height:2px;
+  top:20px;
+  position:absolute;
 }
